# fr24

./: justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml  tests.yml
docs/: index.md
docs/api/: grpc_changelog.md  low_level.md
docs/css/: mkdocstrings.css
docs/usage/: authentication.md  cli.md  directories.md  examples.md  quickstart.md
docs/usage/scripts/: 00_introduction.py  10_flight_list.py  11_playback.py  14_live_feed.py  15_nearest_flights.py  16_live_flights_status.py  16_playback_flight.py  18_follow_flight.py  19_top_flights.py  22_flight_details.py  30_flight_list.py  31_playback.py  32_arrivals.py  33_find.py  34_live_feed.py  35_nearest_flights.py  36_live_flights_status.py  37_search_index.py  38_follow_flight.py  39_top_flights.py  40_live_trail.py  41_historic_trail.py  42_flight_details.py  43_playback_flight.py
scripts/: check_signature.py  compile_proto.py
src/fr24/: _deprecated.py  cache.py  cli.py  grpc.py  json.py  service.py  utils.py
src/fr24/proto/: README.md  _common.proto  _common_pb2.py  _common_pb2.pyi  _fetch_search_index_pb2.py  _fetch_search_index_pb2.pyi  _flight_details_pb2.py  _flight_details_pb2.pyi  _follow_flight_pb2.py  _follow_flight_pb2.pyi  _health_pb2.py  _health_pb2.pyi  _historic_trail_pb2.py  _historic_trail_pb2.pyi  _live_feed_pb2.py  _live_feed_pb2.pyi  _live_flight_status_pb2.py  _live_flight_status_pb2.pyi  _live_trail_pb2.py  _live_trail_pb2.pyi  _nearest_flights_pb2.py  _nearest_flights_pb2.pyi  _playback_flight.proto  _playback_flight_pb2.py  _playback_flight_pb2.pyi  _top_flights_pb2.py  _top_flights_pb2.pyi  headers.py  v1_pb2.py  v1_pb2.pyi
src/fr24/static/: __init__.py
src/fr24/tui/: formatters.py  tui.py  widgets.py
src/fr24/types/: __init__.py  cache.py  isqx.py  json.py  static.py
tests/: conftest.py  test_static.py
tests/api/: test_find.py  test_flight_list.py  test_live_feed.py  test_playback.py  test_playback_flight.py
